packages/truffle/test/sources/migrations/error/migrations/4_migrations_oog.js
const Loops = artifacts.require("Loops");

module.exports = async function(deployer, network, accounts) {
  await deployer.deploy(Loops);
};
